# atomic_habbits

./: .env-non-dev  .env-non-dev.sample  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
docker/: app.sh  celery.sh  celery_beat.sh
habit/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_habit_action_habit_award_habit_is_public_and_more.py  0003_alter_habit_owner.py
tests/: conftest.py  test_habit.py  test_validators.py
users/: models.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_user_username.py  0004_alter_user_options_alter_user_phone_and_more.py
