[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["ShadeSWD <seawolfy60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
django = "^4.2.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
requests = "^2.31.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
celery = "^5.3.6"
redis = "^5.0.1"
django-celery-beat = "^2.5.0"
eventlet = "^0.33.3"
pytest = "^7.4.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
